# jedha-dts-getaround-schemas

./: README.md  pyproject.toml
src/getaround_schemas/: __init__.py  price_predict.py
