[project]
name = "getaround-schemas"
version = "0.1.0"
description = "getaround schemas"
authors = [
    {name = "pfe"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
